<resources>
    <string name="app_name">EventFull</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="Email">Email</string>
    <string name="Login">Login</string>
    <string name="userName">Username</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="ContinueAsGuest">Continue as Guest</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="EventName">Event name</string>
    <string name="NumberOfTickets">Number of tickets</string>
    <string name="Total">Total</string>
    <string name="UpdatePrice">Update Price</string>
    <string name="Book">Book</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">The email address is invalid.</string>
    <string name="error_invalid_password">The password is too short.</string>
    <string name="error_incorrect_password">The password is incorrect.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Permission to access Contacts is required for providing email
        completions."
    </string>
    <string name="DOB">D.O.B</string>
    <string name="BillingAddress">Billing Address</string>
    <string name="PostalCode">Postal Code</string>
    <string name="title_activity_book_event">Book Event Activity</string>
    <string name="eventfull">EventFull</string>
    <string name="search">Search</string>
    <string name="register">Register</string>
    <string name="book">Book</string>
    <!-- Strings related to Add Event Page -->
    <string name="enter_event_type">Enter Event Type</string>
    <string name="enter_id">Enter ID</string>
    <string name="enter_venue_name">Enter Venue Name</string>
    <string name="enter_capacity">Enter Capacity</string>
    <string name="enter_tickets_remaining">Enter Tickets Remaining</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_location">Enter Location</string>
    <string name="add">Add</string>
    <!-- Strings related to Welcome Staff Page -->
    <string name="welcome_staff">Welcome, Staff…</string>
    <string name="edit_event">Edit Event</string>
    <string name="continue_as_user">Continue as User</string>
    <string name="add_event">Add Event</string>
    <!-- Strings related to main page -->
    <string name="when">When?</string>
    <string name="where">Where?</string>
    <string name="what">What?</string>
    <string name="searchButton">Search</string>
    <string name="AdultPrice">Adult Price : 10,20,30</string>
    <string name="ChildPrice">Child Price : 10,20,30</string>
    <string name="seat_location">Seat Location:</string>
    <string name="number_of_tickets">Number of Tickets:</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="total_price_per_ticket">Total Price Per Ticket:</string>
    <string name="todo">TODO</string>
    <string name="location_of_show">LOCATION OF SHOW</string>
    <string name="date_of_show">DATE OF SHOW</string>
    <string name="title_of_show">TITLE OF SHOW</string>
    <string name="tickets_are_only_reserved_for_30_minutes_once_selected_price_is_only_per_ticket_and_does_not_include_service_fee">Tickets are only reserved for 30 minutes once selected. Price is only per ticket and does not include service fee.</string>
    <string name="my_account">My Account</string>
    <string name="event_name_4">Event Name 4</string>
    <string name="your_upcoming_events">Your upcoming events:</string>
    <string name="edit_account_details">EDIT ACCOUNT DETAILS</string>
    <string name="event_name_1">Event Name 1</string>
    <string name="relist_selected_tickets">RELIST SELECTED TICKETS</string>
    <string name="log_out">LOG OUT</string>
    <string name="help_support"><![CDATA[HELP & SUPPORT]]></string>
    <string name="event_name_2">Event Name 2</string>
    <string name="event_name_3">Event Name 3</string>
    <string name="your_account">Your Account...</string>
</resources>
