<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluebackground"
    tools:context=".RelistTicket">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="259dp"
        android:fontFamily="cursive"
        android:text="@string/your_account"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnRelist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/your_upcoming_events"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnRelist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/relist_selected_tickets"
        app:layout_constraintBottom_toTopOf="@+id/btneditAccountDetails"
        app:layout_constraintEnd_toEndOf="@+id/btneditAccountDetails"
        app:layout_constraintStart_toStartOf="@+id/btneditAccountDetails"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btneditAccountDetails"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/edit_account_details"
        app:layout_constraintBottom_toTopOf="@+id/btnHelp"
        app:layout_constraintEnd_toEndOf="@+id/btnHelp"
        app:layout_constraintStart_toStartOf="@+id/btnHelp"
        app:layout_constraintTop_toBottomOf="@+id/btnRelist" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/help_support"
        app:layout_constraintBottom_toTopOf="@+id/btnLogOut"
        app:layout_constraintEnd_toEndOf="@+id/btnLogOut"
        app:layout_constraintStart_toStartOf="@+id/btnLogOut"
        app:layout_constraintTop_toBottomOf="@+id/btneditAccountDetails" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="131dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHelp" />
    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/listView"/>

</android.support.constraint.ConstraintLayout>