<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluebackground">


    <EditText
        android:id="@+id/when"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="591dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/when"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <EditText
        android:id="@+id/where"
        android:layout_width="341dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/where"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/when"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <EditText
        android:id="@+id/what"
        android:layout_width="337dp"
        android:layout_height="39dp"
        android:layout_marginTop="7dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/what_are_you_looking_for"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/where"
        app:layout_constraintStart_toStartOf="@+id/where"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="58dp"
        android:layout_height="0dp"
        android:layout_marginBottom="579dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/when"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/where"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="523dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>